Integration tests (#18)
* Session end (#14)

* [DASHBOARD] swagger not working

* [SWAGGER] all the documentation

* [SESSION_END] fixed env var

* [SESSION_END] final

* SESSION_END] settled

* done


* [main] aded zap logger, modified endpoint, and integration tests

* [INTEGRATION_TESTS] more integration tests, separated seeding from creating
