# internal/handlers/user.go
@@ -3,6 +3,7 @@ package handlers
 import (
 	"encoding/json"
 	"net/http"
+	"strings"
 
 	"github.com/Action-for-Racial-Justice/bookclub-backend/internal/models"
 	"github.com/go-chi/render"
@@ -65,8 +66,8 @@ func (bh *BookClubHandler) GetUserClubs(w http.ResponseWriter, r *http.Request) 
 // swagger:route GET /user user getUserSSOToken
 // Returns a sso token if exists for a email and password
 // responses:
-//	200:
-//	400:
+//	200: Token
+//	400: ErrorResponse
 
 //GetSSOToken grabs sso token for login info
 func (bh *BookClubHandler) GetSSOToken(w http.ResponseWriter, r *http.Request) {
@@ -93,27 +94,50 @@ func (bh *BookClubHandler) GetSSOToken(w http.ResponseWriter, r *http.Request) {
 // swagger:route GET /user user getUserSSOToken
 // Returns a sso token if exists for a email and password
 // responses:
-//	200:
+//	200: ArjUser
 //	400: ErrorResponse
+//  500: ErrorResponse
 
 //GetArjBackendUserData gets user data from ARJ monolithic api through SSO token
 func (bh *BookClubHandler) GetArjBackendUserData(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
-	var tokenizedRequest models.SingleSignOn
+	ssoToken := strings.TrimSpace(
+		strings.Split(
+			r.Header.Get("Authorization"), "Bearer")[1],
+	)
 
-	if err := json.NewDecoder(r.Body).Decode(&tokenizedRequest); err != nil {
-		w.WriteHeader(http.StatusBadRequest)
-		render.JSON(w, r, err)
-		return
-	}
-
-	userData, err := bh.service.FetchUserDataFromToken(tokenizedRequest.Token)
+	userData, err := bh.service.FetchUserDataFromToken(ssoToken)
 
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		render.JSON(w, r, curateJSONError(err))
 		return
 	}
+
+	// go here
+	go bh.service.InsertUserToDataBase(userData)
 	w.WriteHeader(http.StatusOK)
 	render.JSON(w, r, userData)
+}
+
+// swagger:route DELETE /user/session user EndUserSession
+// Returns Nothing
+// responses:
+//	200:
+//	400: ErrorResponse
+
+//EndUserSession ends user session by talking to monolith API
+func (bh *BookClubHandler) EndUserSession(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+
+	splitToken := strings.TrimSpace(
+		strings.Split(
+			r.Header.Get("Authorization"), "Bearer")[1],
+	)
+
+	if err := bh.service.DeleteUserSession(splitToken); err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		render.JSON(w, r, curateJSONError(err))
+	}
+	w.WriteHeader(http.StatusOK)
 }
